--- a/index.html
+++ b/index.html
@@ -319,30 +319,30 @@
 <div class="more-task-container">
     <a href="#" class="more-task-itme">
     <h5 class="more-task-text">Team Collaboration</h5>
-    <img src="Images/Team-Collaboration.webp" alt="">
+    <img src="images/Team-Collaboration.webp" alt="">
     </a>
     <a href="#" class="more-task-itme">
         <h5 class="more-task-text">Apps Integration</h5>
-       <img src="Images/App-Integration.webp" alt="">
+       <img src="images/App-Integration.webp" alt="">
     </a>
 
     <a href="#" class="more-task-itme">
         <h5 class="more-task-text">Employee Performance</h5>
-        <img src="Images/Employee-Performance.webp" alt="">
+        <img src="images/Employee-Performance.webp" alt="">
     </a>
 
     <a href="#" class="more-task-itme">
         <h5 class="more-task-text">Task Automation</h5>
-        <img src="Images/Task-Automation.webp" alt="">
+        <img src="images/Task-Automation.webp" alt="">
     </a>
 
     <a href="#" class="more-task-itme">
         <h5 class="more-task-text">Timesheet Management</h5>
-        <img src="Images/Timesheet-Management.webp" alt="">
+        <img src="images/Timesheet-Management.webp" alt="">
     </a>
 
     <a href="#" class="more-task-itme"><h5 class="more-task-text">AI/ML</h5>
-        <img src="Images/AI-ML-icon.webp" alt="">
+        <img src="images/AI-ML-icon.webp" alt="">
     </a>
   </div>          
 </div>
