--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="images/Assign-and-Manage-task.webp" alt="Step 1">
     </div>
     <div class="step-text">
-        <h3 class="step-heading">SIntuitive Dashboard for At-a-Glance Visibility</h3>
+        <h3 class="step-heading">Intuitive Dashboard for At-a-Glance Visibility</h3>
         <p class="step-description">Stay on top of your projects with the best workflow management software, a centralized view of tasks, deadlines, and team progress at one dashboard, eliminating struggle while switching between different pages. </p>
     </div>
 </div>
