--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div class="try-right">
         <h4 class="try-left-text">Simplify Your Daily Operations with Task Tracker</h4>
-        <a href="https://www.tasktracker.io/request-demo" class="try-btn">Book Demo</a>
+        <a href="#" class="try-btn">Trial and Demo</a>
     </div>
 </div>
 
