--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
 
     <div class="try-right">
-        <h4 class="try-left-text">Simplify Your Daily Operations with Task Tracker</h4>
+        <h4 class="try-left-text">Simplify Your Workflow Management with Task Tracker</h4>
         <a href="#" class="try-btn">Trial and Demo</a>
     </div>
 </div>
