--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <img src="images/Team-Collaboration.webp" alt="">
     </a>
     <a href="#" class="more-task-itme">
-        <h5 class="more-task-text">Apps Integration</h5>
+        <h5 class="more-task-text">Task Tracking</h5>
        <img src="images/App-Integration.webp" alt="">
     </a>
 
@@ -272,7 +272,7 @@
     </a>
 
     <a href="#" class="more-task-itme">
-        <h5 class="more-task-text">Task Automation</h5>
+        <h5 class="more-task-text">Task Management</h5>
         <img src="images/Task-Automation.webp" alt="">
     </a>
 
