--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <!-- Step 2 -->
 <div class="how-it-works-step reverse">
     <div class="step-text">
-        <h3 class="step-heading">Automated Task Scheduling and Reminders:</h3>
+        <h3 class="step-heading">Task Scheduling and Reminders:</h3>
         <p class="step-description"> Let Task Tracker handle the administrative tasks, so you can focus on the work that matters. This streamlined workflow management software have inbuilt WhatsApp feature to remind and update regarding the status of your work.</p>
     </div>
     <div class="step-img">
